--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
+    "@ionic/pwa-elements": "^1.5.2",
     "duman-ui": "file:electron",
     "electron": "^9.1.0",
     "ngx-electron": "^2.2.0",
