--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "@capacitor/core": "2.2.1",
     "@capacitor/ios": "^2.2.1",
     "@ionic-native/core": "^5.0.7",
+    "@ionic-native/qr-scanner": "^5.27.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.0.0",
     "@ionic/pwa-elements": "^1.5.2",
+    "cordova-plugin-qrscanner": "^3.0.1",
     "duman-ui": "file:electron",
     "electron": "^9.1.0",
+    "jetifier": "^1.6.6",
     "ngx-electron": "^2.2.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
